--- a/social-media/package.json
+++ b/social-media/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0"
